--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,5 @@
-<resources>
-  <style name="AppTheme" parent="Theme.AppCompat.NoActionBar"/>
-
+<resources xmlns:tools="http://schemas.android.com/tools">
+  <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+  </style>
 </resources>
